Added 2 new recipes and finished the project
Added 3 new images
Modified index by adding a new image and links for all pages
Added links to recipe pages pointing back to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/christmas_cookies.html"> Christmas Cookies </a>
+    <img src="img/recipebook.jpeg">
+    <ul>
+        <li><a href="recipes/christmas_cookies.html"> Christmas Cookies </a></li>
+        <br>
+        <li><a href="recipes/christmas_hot_chocolate.html"> Christmas Hot Chocolate </a></li>
+        <br>
+        <li><a href="recipes/prime_rib_christmas_special.html"> Perfect Christmas Rib Roast</a></li>
+    </ul>
+
+    <br><br>
+    
+    <br><br>
 
 </body>
 </html>
