Updated CSS for the Odin-recipe project

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>NullZeal Recipes</h1>
     <img src="img/recipebook.jpeg">
-    <ul>
-        <li><a href="recipes/christmas_cookies.html"> Christmas Cookies </a></li>
-        <br>
-        <li><a href="recipes/christmas_hot_chocolate.html"> Christmas Hot Chocolate </a></li>
-        <br>
-        <li><a href="recipes/prime_rib_christmas_special.html"> Perfect Christmas Rib Roast</a></li>
-    </ul>
-
+    <div class="recipes">
+        <ul class="main-menu">
+            <br>
+            <li><a href="recipes/christmas_cookies.html"> Christmas Cookies </a></li>
+            <br>
+            <li><a href="recipes/christmas_hot_chocolate.html"> Christmas Hot Chocolate </a></li>
+            <br>
+            <li><a href="recipes/prime_rib_christmas_special.html"> Perfect Christmas Rib Roast</a></li>
+            <br>
+        </ul>
+    </div>
     <br><br>
-    
     <br><br>
-
 </body>
 </html>
