--- a/recipes/christmas_cookies.html
+++ b/recipes/christmas_cookies.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christmas Cookies Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Christmas Cookies</h1>
 
-    <img src="../img/christmas_cookies.png">
+    <img class="img-cookie"src="../img/christmas_cookies.png">
 
     <h2>Description : </h2>
     <p>
